# cmake-kconfig

./: .gitignore  CMakeLists.txt  Kconfig  README.md  test1.cpp  test2.cpp
.github/workflows/: ci-cmake-tests.yml
cmake/: extensions.cmake  kconfig.cmake  python.cmake  top.cmake
configs/: test_defconfig
scripts/kconfig/: hardenconfig.py  kconfig.py  lint.py
